--- a/app/batchfiles/batchfile-list.component.html
+++ b/app/batchfiles/batchfile-list.component.html
@@ -1,22 +1,34 @@
 <div class='panel panel-primary'>
     <div class='panel-heading'>
         <div class='row'>
-            <div class='col-xs-2' align='right'>Parent Case:</div>
-            <div class='col-xs-1' align='left'>1010101</div>
-            <div class='col-xs-1' align='right'>Sub Case:</div>
-            <div class='col-xs-1' align='left'>789987</div>
-            <div class='col-xs-1' align='right'>User:</div>
-            <div class='col-xs-1' align='left'>galtenhofen</div>
+            <div class='col-xs-2' id='dfgLbl' vertical-align='middle' align='right'>DataFileGroupId:</div>
+            <div class='col-xs-2' align='left' style='color:#000000'><input class="form-control input-lg" type='text' [(ngModel)]='dataFileGroupId' placeholder="Enter DataFileGroupID"/></div>
+            <div class='col-xs-1'>
+                            <button class='btn btn-success' id='getBtn' (click)='onClickrefreshBatchList()'>
+                                Get Files
+                            </button>
+                    </div>
+              <div class="radio-toolbar">
+
+                    <input type="radio" id="radio1" name="radios" value="N" checked>
+                    <label for="radio1">Don't Override Cost Updates</label>
+
+                    <input type="radio" id="radio2" name="radios" value="O">
+                    <label for="radio2">Override Cost Updates</label>
+
+               </div>
+           <!--  <div class='col-xs-2' align='right'>User:</div>
+            <div class='col-xs-2' align='left'>{{userName}}</div>-->
         </div>
 
     </div>  <!-- panel-heading closure -->
-
+<!--
 <div class='panel panel-info'>
         <div class='panel-heading'>
             <div class='row'>
-                    <div class='col-xs-1'>
+                   <!--  <div class='col-xs-1'>
                             <button class='btn btn-success' (click)='onClickrefreshBatchList()'>
-                                Refresh
+                                Get Files
                             </button>
                     </div>
                <div class="radio-toolbar">
@@ -30,7 +42,7 @@
                </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class='panel-body'>
 
 
@@ -70,14 +82,16 @@
                 
                 </tbody>
                </table>
-
+                <div class= 'panel-heading' *ngIf= 'attempt==false && !loading'>
+                      Enter a DataFileGroupId to get files.
+                   </div> 
                <div class= 'panel-heading' *ngIf= 'loading && (!batchfiles || batchfiles.length < 1)'>
                       Retrieving Batches...
                    </div>   
                <div class= 'panel-heading' *ngIf='errorMessage'>
                       There was a problem retrieving Batches.  Error Code: {{errorMessage}}
                    </div>  
-                <div class= 'panel-heading' *ngIf='(!batchfiles || batchfiles.length < 1) && !errorMessage && !loading'>
+                <div class= 'panel-heading' *ngIf='(!batchfiles || batchfiles.length < 1) && !errorMessage && !loading && attempt!=false'>
                       There is no data for this facility
                    </div>  
            </div> <!-- this is the table-responsive wrapper-->  
