--- a/app/batchfiles/batchfile-list.component.html
+++ b/app/batchfiles/batchfile-list.component.html
@@ -10,10 +10,10 @@
                     </div>
               <div class="radio-toolbar" align='left'>
 
-                    <input type="radio" id="radio1" name="radios" value="N" checked>
+                    <input (click)='toggleOverride(0)' type="radio" id="radio1" name="radios" value="0" checked>
                     <label for="radio1">Don't Override Cost Updates</label>
 
-                    <input type="radio" id="radio2" name="radios" value="O">
+                    <input (click)='toggleOverride(1)' type="radio" id="radio2" name="radios" value="1">
                     <label for="radio2">Override Cost Updates</label>
 
                </div>
@@ -26,7 +26,7 @@
 
 
 
-<!--<div >-->
+<!--<modal-error></modal-error>-->
 <modal-confirm></modal-confirm>
 <body onload='makeTableScroll();'>
 <div class='scrollingTable'> 
@@ -51,9 +51,9 @@
                     <td style="text-align:center">{{batchfile.volume}}</td>
                     <td style="text-align:center">{{batchfile.avgImpCharge}}</td>
                     <td style="text-align:center">{{batchfile.avgVarCost}}</td>
-                    <td style="text-align:center" *ngIf="updateCheckbox.checked!=true" ><input #updateVarCost type="number" min="1" id="updateVarCost" [attr.id]="'updateVarCost' + batchfile.encounterGroupType" [(ngModel)]='updateVarCost[i]' (change)="onUpdateVarCost(batchfile.encounterGroupType,updateVarCost[i])" aria-label="..."></td>
+                    <td style="text-align:center" *ngIf="updateCheckbox.checked!=true" ><input #updateVarCost type="number" min="1" id="updateVarCost" [attr.id]="'updateVarCost' + batchfile.encounterGroupType" [(ngModel)]='updateVarCost[i]' (change)="onUpdateVarCost(batchfile.avgImpCharge,batchfile.encounterGroupType,updateVarCost[i])" aria-label="..."></td>
                      <td *ngIf="updateCheckbox.checked==true"><div></div></td>  
-                    <td style="text-align:center"><input #updateCheckbox type="checkbox" id="updateCheckbox" value="option1" (change)="onToggleUpdate(batchfile.encounterGroupType,updateCheckbox.checked)" aria-label="..."></td>
+                    <td style="text-align:center"><input #updateCheckbox type="checkbox" id="updateCheckbox" value="option1" (change)="onToggleUpdate(batchfile.avgImpCharge, batchfile.encounterGroupType,updateCheckbox.checked)" aria-label="..."></td>
                 </tr> 
                 
                 </tbody>
@@ -85,7 +85,7 @@
                 <div class='col-xs-2'></div>
             
              <div class='col-xs-3' >
-                <button id='cancelBtn' class='btn btn-primary' (click)='onClickClose()' > Cancel </button> 
+                <button id='cancelBtn' class='btn btn-primary' (click)='onClickCancel()' > Cancel </button> 
                 <button id='saveBtn' class='btn btn-primary' (click)='onClickClose()' > Save </button> 
                 <button id='submitBtn' class='btn btn-danger' disabled (click)='onClickSubmit()' > Submit </button> 
               </div> 
