--- a/app/shared/error/error.component.html
+++ b/app/shared/error/error.component.html
@@ -3,11 +3,11 @@
        <h4>{{title}}</h4>
        <h3>{{message}}</h3>
        <div class="mdl-card__actions dialog-button-bar">
-        <!--   <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" id="cancelButton"
+           <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" id="cancelButton"
                    data-upgraded=",MaterialButton,MaterialRipple">{{cancelText}}<span
                    class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span>
            </button>
-           -->
+           
            <button class="mdl-button mdl-button--accent mdl-button--raised mdl-js-button mdl-js-ripple-effect"
                    id="okButtonError" data-upgraded=",MaterialButton,MaterialRipple">{{okText}}<span
                    class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span>
