--- a/app/shared/error/error.component.css
+++ b/app/shared/error/error.component.css
@@ -4,6 +4,7 @@
     overflow: hidden;
     top: 35%;
     left: 25%;
+    width: 350px;
     background: rgba(0, 0, 0, 0.75);
     z-index: -1;
     opacity: 0;
@@ -14,13 +15,13 @@
 
 .dialog-container > div {
     position: relative;
-    width: 90%;
+    width: 95%;
     max-width: 500px;
     min-height: 25px;
-    margin: 10% auto;
+    margin: 5% auto;
     z-index: 99999;
     color:lightblue;
-    padding: 16px 16px 0;
+    padding: 6px 6px 0;
 }
 
 .dialog-button-bar {
@@ -31,8 +32,8 @@
 .loading-container > div {
     position: relative;
     width: 50px;
-    height: 50px;
-    margin: 10% auto;
+    height: 100px;
+    margin: 5% auto;
     z-index: 99999;
     background: black;
 }
